some pathplanning notes forgot to commit