@@ -7,16 +7,13 @@ import group.seven.model.agents.Agent;
 import group.seven.model.agents.Move;
 import group.seven.model.environment.TileNode;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
 
 import static group.seven.enums.TileType.WALL;
 
 public class AStarPathFinder {
 
-    public static int instances = 0;
+    //public static int instances = 0;
 
     private final AStarNode currentNode;
 
@@ -29,10 +26,9 @@ public class AStarPathFinder {
     List<AStarNode> closed; //TODO: maybe remove
     private TileNode[][] internalMap; // agent representation
 
-
     public AStarPathFinder(Agent player, XY goal) {
-        instances++;
-        System.out.print("\r number: " + instances + " from: " + player.getType());
+        //instances++;
+        //System.out.print("\r number: " + instances + " from: " + player.getType());
         this.target = new AStarNode(goal, this);
         open = new ArrayList<>();
         closed = new ArrayList<>();
@@ -44,24 +40,32 @@ public class AStarPathFinder {
         //internalMap.add(new TileNode(new Tile(startCoordinate.x(), startCoordinate.y())));
     }
 
-
     public List<Move> findPath() {
         internalMap = player.getMap();
-        List<AStarNode> openedNodes = new ArrayList<>();
-        List<AStarNode> closedNodes = new ArrayList<>();
+        LinkedList<AStarNode> openedNodes = new LinkedList<>();
+        List<AStarNode> closedNodes = new LinkedList<>();
         openedNodes.add(currentNode);
         currentNode.updateCost();
 
         while (!openedNodes.isEmpty()) {
-            AStarNode node = openedNodes.get(0);
+//            AStarNode node = openedNodes.get(0);
+            AStarNode node = openedNodes.getFirst();
             for (int i = 1; i < openedNodes.size(); i++) {
-                if (openedNodes.get(i).getfCost() < node.getfCost()) {
-                    node = openedNodes.get(i);
-                } else if (openedNodes.get(i).getfCost() == node.getfCost()) {
-                    if (openedNodes.get(i).gethCost() < node.gethCost()) {
-                        node = openedNodes.get(i);
-                    }
+                AStarNode ith = openedNodes.get(i);
+                if (ith.getfCost() < node.getfCost()) {
+                    node = ith;
+                } else if (ith.getfCost() == node.getfCost()) {
+                    if (ith.gethCost() < node.gethCost())
+                        node = ith;
                 }
+
+//                if (openedNodes.get(i).getfCost() < node.getfCost()) {
+//                    node = openedNodes.get(i);
+//                } else if (openedNodes.get(i).getfCost() == node.getfCost()) {
+//                    if (openedNodes.get(i).gethCost() < node.gethCost()) {
+//                        node = openedNodes.get(i);
+//                    }
+//                }
             }
             openedNodes.remove(node);
             //System.out.println("agent"+player.getType());
@@ -140,7 +144,8 @@ public class AStarPathFinder {
 
     // from path of nodes to path of actions
     public List<Action> actionsPath(List<AStarNode> nodePath) {
-        List<Action> actionPath = new ArrayList<>();
+//        List<Action> actionPath = new ArrayList<>();
+        List<Action> actionPath = new LinkedList<>();
         Cardinal orientation = player.getDirection();
         for (int i = 0; i < nodePath.size() - 1; i++) {
             AStarNode previous = nodePath.get(i);
